--- a/_publications/2019-04-06-paper1.md
+++ b/_publications/2019-04-06-paper1.md
@@ -3,11 +3,11 @@ title: "An on-chip digital monostable multivibrator using inverter-based delay c
 collection: publications
 category: manuscripts
 permalink: /publication/2019-04-06-paper1
-excerpt: 'Monostable multivibrator or one-shot timer is widely used in signal processing. In this paper, a simple and useful way to realize retriggerable monostable multivibrator by using digital logic gates is presented. The basic circuit is composed of one D flip-flop, one NAND gate, one inverter (INV) and two inverter-based delay chains. The width of the output pulse is adjusted through tuning the delay of the inverter-based delay chain. The retriggerable characteristic is realized by resetting all the delayed signals when new triggering occurs in the current monostable period. The basic circuit is designed and fabricated on-chip using a 180nm standard CMOS process with effective area less than 1200m2. The retriggerable version is realized in a FPGA platform. Both simulated and measured results are in agreement with the theoretical analysis.'
+excerpt: ''
 date: 2019-04-06
 venue: 'Journal of Circuits, Systems and Computers'
 paperurl: 'https://www.worldscientific.com/doi/abs/10.1142/S0218126619200019'
 citation: 'Wan M, Zhang Y, Zhang M, et al. An on-chip digital monostable multivibrator using inverter-based delay chains[J]. Journal of Circuits, Systems and Computers, 2019, 28(04): 1920001.'
 ---
 
-The contents above will be part of a list of publications, if the user clicks the link for the publication than the contents of section will be rendered as a full page, allowing you to provide more information about the paper for the reader. When publications are displayed as a single page, the contents of the above "citation" field will automatically be included below this section in a smaller font.
+Monostable multivibrator or one-shot timer is widely used in signal processing. In this paper, a simple and useful way to realize retriggerable monostable multivibrator by using digital logic gates is presented. The basic circuit is composed of one D flip-flop, one NAND gate, one inverter (INV) and two inverter-based delay chains. The width of the output pulse is adjusted through tuning the delay of the inverter-based delay chain. The retriggerable characteristic is realized by resetting all the delayed signals when new triggering occurs in the current monostable period. The basic circuit is designed and fabricated on-chip using a 180nm standard CMOS process with effective area less than 1200m2. The retriggerable version is realized in a FPGA platform. Both simulated and measured results are in agreement with the theoretical analysis.
