--- a/_publications/2024-09-20-paper10.md
+++ b/_publications/2024-09-20-paper10.md
@@ -3,11 +3,11 @@ title: "A Low Power Capacitive Sensor Readout Circuit"
 collection: publications
 category: conferences
 permalink: /publication/2024-09-20-paper10
-excerpt: 'To quantify the capacitance of a capacitive sensor, this paper adopts the same supply voltage (VDD) stable charging current and comparison threshold for both the local and external sensor relaxation oscillators, enabling the local counter to quantize the frequency of the sensor relaxation oscillator with minimal circuit complexity and power consumption. Additionally, when the sensor is utilized as a capacitive switch, since the capacitance variation trend between the on-chip capacitor and the external sensor is inconsistent, make the sensor state inaccurate. Therefore, this paper also presents a detection mechanism based on a comparison between the count values of sensor oscillator in preceding and subsequent time windows. An auxiliary instantaneous reference is also used to determine whether the sensor returns to its previous state. This mechanism enables the high precision and broad range detection of changes in the sensor’s capacitance, effectively mitigating erroneous state transitions. Test results show that the maximum current consumed by the entire readout circuit is less than 2 μA, and it can detect the capacitance variation of 1% when the capacitance of sensor is in the range of 10~20 pF.'
+excerpt: ''
 date: 2024-09-20
 venue: '2024 6th International Conference on Circuits and Systems (ICCS)'
 paperurl: 'https://ieeexplore.ieee.org/abstract/document/10846711'
 citation: 'Z. Zhang, Y. Ma, Z. Wang, R. Liu, M. Zhang and M. Wan, "A Low Power Capacitive Sensor Readout Circuit," 2024 6th International Conference on Circuits and Systems (ICCS), Chengdu, China, 2024, pp. 85-90.'
 ---
 
-The contents above will be part of a list of publications, if the user clicks the link for the publication than the contents of section will be rendered as a full page, allowing you to provide more information about the paper for the reader. When publications are displayed as a single page, the contents of the above "citation" field will automatically be included below this section in a smaller font.
+To quantify the capacitance of a capacitive sensor, this paper adopts the same supply voltage (VDD) stable charging current and comparison threshold for both the local and external sensor relaxation oscillators, enabling the local counter to quantize the frequency of the sensor relaxation oscillator with minimal circuit complexity and power consumption. Additionally, when the sensor is utilized as a capacitive switch, since the capacitance variation trend between the on-chip capacitor and the external sensor is inconsistent, make the sensor state inaccurate. Therefore, this paper also presents a detection mechanism based on a comparison between the count values of sensor oscillator in preceding and subsequent time windows. An auxiliary instantaneous reference is also used to determine whether the sensor returns to its previous state. This mechanism enables the high precision and broad range detection of changes in the sensor’s capacitance, effectively mitigating erroneous state transitions. Test results show that the maximum current consumed by the entire readout circuit is less than 2 μA, and it can detect the capacitance variation of 1% when the capacitance of sensor is in the range of 10~20 pF.
