--- a/_publications/2025-04-15-paper13.md
+++ b/_publications/2025-04-15-paper13.md
@@ -3,11 +3,11 @@ title: "Enhancing stock ranking forecasting by modeling returns with heterosceda
 collection: publications
 category: manuscripts
 permalink: /publication/2025-04-15-paper13
-excerpt: 'Accurately selecting stocks with the highest returns is crucial for profitable investing. However, predicting stock price movements is challenging due to the high degree of randomness caused by factors such as market opacity, unexpected events, erratic trades, etc. Previous research has primarily focused on extracting more information from inputs to map to the observed returns, such as modeling the complex relations of different stocks. However, they overlooked the uncertainty of returns caused by the randomness market. To mitigate it, we propose a novel analytical framework. The starting point is that the stock returns follow some distributions, so the observed returns are samples from them, and the variances are the source of randomness. After analysis, past studies were equivalent regarding the returns of different stocks at each time following homoscedastic Gaussian distributions, aiming to predict the mean of these distributions. We find that the hypothesis to be unreasonable and extend these distributions to the heteroscedastic case, presenting a revised model structure and learning objectives. The proposed method aims to simultaneously predict the mean and the standard deviation of distributions from inputs, and the model is trained based on the maximum likelihood principle. Experiment results on the stock members of the CSI 100, 300, and 500 Chinese market indexes show significant improvements compared with the previous methods. The annualized return of the Top 20 stock portfolios improved absolutely 2%, 20%, and 50%, proving the effectiveness of our framework. We discuss the roles of the obtained mean and standard deviation in pursuing more profits, and we extend our theory to a more general form through mathematical derivation.'
+excerpt: ''
 date: 2025-04-15
 venue: 'Physica A: Statistical Mechanics and its Applications'
 paperurl: 'https://www.sciencedirect.com/science/article/pii/S0378437125000949'
 citation: 'Yang J, Fang R, Zhang M, et al. Enhancing stock ranking forecasting by modeling returns with heteroscedastic Gaussian Distribution[J]. Physica A: Statistical Mechanics and its Applications, 2025, 664: 130442.'
 ---
 
-The contents above will be part of a list of publications, if the user clicks the link for the publication than the contents of section will be rendered as a full page, allowing you to provide more information about the paper for the reader. When publications are displayed as a single page, the contents of the above "citation" field will automatically be included below this section in a smaller font.
+Accurately selecting stocks with the highest returns is crucial for profitable investing. However, predicting stock price movements is challenging due to the high degree of randomness caused by factors such as market opacity, unexpected events, erratic trades, etc. Previous research has primarily focused on extracting more information from inputs to map to the observed returns, such as modeling the complex relations of different stocks. However, they overlooked the uncertainty of returns caused by the randomness market. To mitigate it, we propose a novel analytical framework. The starting point is that the stock returns follow some distributions, so the observed returns are samples from them, and the variances are the source of randomness. After analysis, past studies were equivalent regarding the returns of different stocks at each time following homoscedastic Gaussian distributions, aiming to predict the mean of these distributions. We find that the hypothesis to be unreasonable and extend these distributions to the heteroscedastic case, presenting a revised model structure and learning objectives. The proposed method aims to simultaneously predict the mean and the standard deviation of distributions from inputs, and the model is trained based on the maximum likelihood principle. Experiment results on the stock members of the CSI 100, 300, and 500 Chinese market indexes show significant improvements compared with the previous methods. The annualized return of the Top 20 stock portfolios improved absolutely 2%, 20%, and 50%, proving the effectiveness of our framework. We discuss the roles of the obtained mean and standard deviation in pursuing more profits, and we extend our theory to a more general form through mathematical derivation.
