--- a/_publications/2025-09-10-paper19.md
+++ b/_publications/2025-09-10-paper19.md
@@ -6,7 +6,7 @@ permalink: /publication/2025-09-10-paper19
 excerpt: ''
 date: 2025-09-10
 venue: 'Measurement'
-paperurl: 'https://ieeexplore.ieee.org/document/11150440'
+paperurl: 'https://www.sciencedirect.com/science/article/pii/S0263224125022742'
 citation: 'Lu J, Guan W, Zhang M, et al. MFPPG: Multi-feature fusion and patch-wise perturbation generation for anomalous sound detection[J]. Measurement, 2025: 118915.'
 ---
 
